--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+# liquibase
+spring.liquibase.enabled=true
+spring.liquibase.change-log= db/changelog/db.changelog-master.xml
+
