Добавлен простой кеш Redis и профили InMemory/Redis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.liquibase.enabled=true
 spring.liquibase.change-log= db/changelog/db.changelog-master.xml
 
+# cache
+spring.cache.type=none
+
+# profile
+#spring.profiles.active=inMemory
+#spring.profiles.active=Redis
