--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,11 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     implementation 'org.liquibase:liquibase-core'
     implementation 'org.apache.commons:commons-lang3:3.14.0'
     runtimeOnly 'com.h2database:h2'
-
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
