--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ spring.liquibase.change-log= db/changelog/db.changelog-master.xml
 spring.cache.type=none
 
 # profile
-#spring.profiles.active=inMemory
+spring.profiles.active=inMemory
 #spring.profiles.active=Redis
