--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,14 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.junit.platform:junit-platform-engine:1.9.2'
+    implementation 'org.junit.platform:junit-platform-commons:1.9.2'
+
+    testImplementation("org.junit.platform:junit-platform-commons:1.9.0")
+
+    testImplementation("org.junit.platform:junit-platform-launcher:1.9.2")
+    testImplementation("org.junit.platform:junit-platform-runner:1.9.2")
+    testRuntimeOnly("org.junit.platform:junit-platform-suite:1.9.2")
 }
 
 test {
