--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
@@ -34,6 +35,7 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.example.starters:test-runner-starter:1.0.0'
 }
 
 test {
