--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+    testImplementation 'org.example.starters:logging-starter:1.0.0'
 
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     implementation 'org.liquibase:liquibase-core'
