--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,11 @@ spring.cache.type=none
 # profile
 spring.profiles.active=inMemory
 #spring.profiles.active=Redis
+
+# logging
+logging.starter.enabled=true
+logging.starter.rest-controller-enabled=true
+logging.starter.service-enabled=true
+logging.starter.log-method-args=true
+logging.starter.log-method-result=true
+logging.starter.log-execution-time=true
