--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,9 @@ spring.profiles.active=inMemory
 #spring.profiles.active=Redis
 
 # logging
+#logging.level.org.springframework.aop=DEBUG
+#logging.level.org.springframework.beans=DEBUG
+
 logging.starter.enabled=true
 logging.starter.rest-controller-enabled=true
 logging.starter.service-enabled=true
